# custom-saleschimp

./: .env.example  .gitignore  Dockerfile.ui  README.md  docker-compose.override.yaml
gateway/: Dockerfile  pyproject.toml
gateway/alembic/: env.py
gateway/alembic/versions/: 0001_initial.py  0002_billing_catalog.py  0003_cost_provider_credentials.py  0004_phone_number_kind.py  0005_packages_pricing.py  0006_packages_advanced.py  0007_wallet_usage.py  0008_payments.py  0009_payment_provider_configs.py  0010_multi_currency_fx.py  0011_tenant_sso.py  0012_plugin_marketplace.py  0013_tenant_org_settings.py  0014_support_tickets.py  0015_mailbox_and_ticket_read.py  0016_mail_messages.py  0017_mail_folder.py  0018_super_admin_permissions.py  0019_payment_purpose.py  0020_tenant_suspension.py  0021_suspension_mode.py  0022_platform_user_profile.py  0023_security_2fa_settings.py  0024_tenant_org_profile.py  0025_notifications.py  0026_custom_fields.py  0027_google_integration.py  0028_tax_rates.py  0029_seed_settings.py  0030_tenant_settings.py
gateway/app/: config.py  db.py  main.py  models.py
gateway/app/admin/: audit.py  cost_providers.py  custom_fields.py  dashboard.py  email_providers.py  finance.py  fx_rates.py  integrations.py  invites.py  mail_cron.py  marketplace.py  notification_settings.py  notifications.py  packages.py  payment_providers.py  payments.py  permissions.py  platform_users.py  plugins.py  price_sync.py  profile.py  routes.py  security.py  (+6 more)
gateway/tests/: conftest.py  test_google_import_e2e.py  test_internal_token_e2e.py  test_social_login_e2e.py
(+291 files in other folders)
