[project]
name = "saleschimp-gateway"
version = "0.0.1"
description = "SaaS gateway: auth, multi-tenancy, plugin runtime, in front of Dograh"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pydantic[email]>=2.7",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "bcrypt>=4.2",
  "pyjwt>=2.9",
  "python-multipart>=0.0.9",
  "structlog>=24.4",
  "jinja2>=3.1",
  "cryptography>=43",
  "websockets>=13",
  "aioboto3>=13",
  "aiosmtplib>=3",
  # IMAP client for the mailbox fetcher (Communication → Email). Pulls
  # UNSEEN messages on a schedule and stores them in mail_messages.
  "aioimaplib>=1.1",
  # 2FA: TOTP (Google Authenticator) + pure-python QR (no PIL dependency).
  "pyotp>=2.9",
  "segno>=1.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
